<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondFragment" >

    <TextView
        android:id="@+id/form_title"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/text_second_frag"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/formName"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/name_form" />

    <EditText
        android:id="@+id/formBday"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="date"
        android:text="@string/birthday_form" />

    <EditText
        android:id="@+id/formID"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/employee_id_form" />

    <TextView
        android:id="@+id/spinnerTitle"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="-10dp"
        android:gravity="center"
        android:text="@string/spinner_title_form"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:contentDescription="@string/app_name"
        android:gravity="center" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="175dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/checkbox_form"
        android:textSize="16sp" />

    <Button
        android:id="@+id/formButton"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/button_form" />

</LinearLayout>