<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ThirdFragment" >

    <TextView
        android:id="@+id/data_Title"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/data_title"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/data_Name"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/data_name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/data_BDay"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/data_bday"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/data_ID"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/data_id"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/data_Office"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/data_office"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/data_Remote"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/data_remotestatus"
        android:textSize="16sp" />
</LinearLayout>