<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainFragment">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="142dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/text_main_frag"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="270dp"
        android:layout_height="57dp"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/username_text" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="270dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        android:text="@string/login_button" />

</LinearLayout>