<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:name="java21.lifecycle.MainFragment"
        android:layout_width="410dp"
        android:layout_height="730dp"
        app:layout_constraintEnd_toStartOf="@+id/bottomNavigationView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_main" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView2"
        android:layout_width="410dp"
        android:layout_height="111dp"
        app:flow_horizontalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/button_main"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:layout_gravity="center|start"
            android:text="@string/button_main" />

        <Button
            android:id="@+id/button_third"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:layout_gravity="center|end"
            android:text="@string/button_third" />

        <Button
            android:id="@+id/button_second"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/button_second" />
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>